# simpleTree

./: .gitignore  CMakeLists.txt  bufferpointcloud.cpp  bufferpointcloud.h
config/: method.ini  position1.cam  position2.cam
html/: cite_stat.html  cite_stat.html~  project.html  tip_stat.html  tip_stat.html~
html/help_start/: ImeO2BgE.html  help_start.html  index.php
output/: .Rhistory
src/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  controller.cpp  controller.h  includes.h  main.cpp
src/.kdev4/: src.kdev4
src/Model/: Cylinder.cpp  Cylinder.h  Segment.cpp  Segment.h  Tree.cpp  Tree.h  childcylinderextraction.cpp  childcylinderextraction.h  crown.cpp  crown.h  moc_Cylinder.cxx_parameters  moc_Segment.cxx_parameters  moc_Tree.cxx_parameters  moc_crown.cxx_parameters
src/Model/modelAdjustment/: allometry.cpp  allometry.h
src/config/: method.ini
src/export/: exportply.cpp  exportply.h  moc_exportply.cxx_parameters  moc_writecsv.cxx_parameters  writecsv.cpp  writecsv.h
src/gui/: allign.cpp  allign.h  allign_dialog.ui  allometry_dialog.ui  crop_box_dialog.ui  crown_dialog.ui  eigen_dialog.ui  euclidean_dialog.ui  guisubclass.h  intensity_dialog.ui  method_dialog.ui  moc_pclviewer.cxx_parameters  optimization.cpp  optimization.h  optimize_dialog.ui  pcl_visualizer.pro  pclviewer.cpp  pclviewer.h  pclviewer.ui  radius_dialog.ui  reference_dialog.ui  statistical_dialog.ui  voxel_grid_dialog.cpp  voxel_grid_dialog.h  voxel_grid_dialog.h.autosave  voxel_grid_dialog.ui  workerspherefollowing.cpp  workerspherefollowing.h
src/gui/allign/: allign.cpp  allign.h  allign.h.autosave  allign_dialog.ui
src/gui/color_palette/: color_diameter_classes.cpp  color_diameter_classes.h  color_factory.cpp  color_factory.h  color_palette.h
src/gui/cropbox/: crop_box_dialog.ui  cropboxdialog.cpp  cropboxdialog.h  cropboxdialog.h.autosave
src/gui/cropsphere/: crop_sphere_dialog.ui  cropspheredialog.cpp  cropspheredialog.h
src/gui/curvature/: curvature_dialog.ui  curvaturedialog.cpp  curvaturedialog.h
src/gui/publication/erythrophleum_fordii/: ery_denoise.cpp  ery_denoise.h  ery_folder.cpp  ery_folder.h
src/gui/publication/eucalyptus_spp/: eucalypt_folder.cpp  eucalypt_folder.h
src/gui/publication/pinus_massoniana/: pine_denoise.cpp  pine_denoise.h  pinus_folder.cpp  pinus_folder.h
src/gui/publication/platanus/: plane_folder.cpp  plane_folder.h
src/gui/publication/quercus_petraea/: quercus_denoise.cpp  quercus_denoise.h  quercus_folder.cpp  quercus_folder.h
src/gui/reference/: reference_dialog.ui  referenceheightdialog.cpp  referenceheightdialog.h
src/gui/statistics/: visustatistics.cpp  visustatistics.h
src/import/: importpcd.cpp  importpcd.h  moc_importpcd.cxx_parameters
src/method/: SphereFollowing.cpp  SphereFollowing.h  StemPointDetection.cpp  StemPointDetection.h  eigenvalueestimator.cpp  eigenvalueestimator.h  method_coefficients.h  moc_SphereFollowing.cxx_parameters  set_coefficients.cpp  set_coefficients.h  stem_fit.cpp  stem_fit.h
src/method/optimization/: down_hill_simplex.cpp  down_hill_simplex.h  optimization.cpp  optimization.h  optimization_stem.cpp  optimization_stem.h  workerspherefollowing.cpp  workerspherefollowing.h  workerstemfit.cpp  workerstemfit.h
src/pointclouds/: allignpointcloud.cpp  allignpointcloud.h  bufferpointcloud.cpp  bufferpointcloud.h  voxelgridfilter.cpp  voxelgridfilter.h
